# mellow

./: Cargo.toml  README.md
src/: client.rs  error.rs  json.rs  lib.rs
src/event/: client.rs  mod.rs
src/event/client/: mod.rs  ready.rs
src/event/packet/: client.rs  mod.rs  ready.rs
src/gateway/: client.rs  error.rs  gateway_op.rs  heart.rs  mod.rs  payload.rs  ws_client.rs
src/gateway/packet/: client.rs  mod.rs
src/handler/: mod.rs  packet_handler.rs
src/http/: client.rs  mod.rs
src/model/: application.rs  gateway_intent.rs  guild.rs  mod.rs  team.rs  user.rs
tests/: test_client.rs
