[package]
name = "mellow"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.2.2"
futures = "0.3.23"
serde_json = "1.0.85"
serde_repr = "0.1.9"
once_cell = "1.15.0"

[dependencies.tokio-tungstenite]
version = "0.17"
features = ["native-tls"]

[dependencies.tokio]
version = "1.20.1"
features = ["macros", "rt-multi-thread", "time", "sync"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]